log/build_2026-03-01_22-43-05/master_ros2_pkg/stderr.log
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:49:2: error: expected ‘;’ after class definition
   49 | }
      |  ^
      |  ;
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp: In constructor ‘PublisherNode::PublisherNode()’:
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:10:73: error: ‘class rclcpp::QoS’ has no member named ‘transient_’; did you mean ‘transient_local’?
   10 |         auto qos_profile = rclcpp::QoS(rclcpp::KeepLast(10)).reliable().transient_ local();
      |                                                                         ^~~~~~~~~~
      |                                                                         transient_local
gmake[2]: *** [CMakeFiles/publisher_node.dir/build.make:76: CMakeFiles/publisher_node.dir/src/publisher_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/publisher_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake: *** [Makefile:146: all] Error 2
